--- a/springboot-thymeleaf-curd-web-app/src/main/resources/templates/index.html
+++ b/springboot-thymeleaf-curd-web-app/src/main/resources/templates/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
 <title>Employee Management System</title>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body>
-	<div align="center">
+	<div align="center" class="container my-2">
+	<a th:href="@{/showNewEmployeeForm}"> Add Employee</a>
 		<h1>Employees List</h1>
-		<table border="1">
+		<table border="1" class="table table-striped table-responsive-md">
 			<thead>
 				<tr>
 					<th>Employee First Name</th>
