--- a/springboot-thymeleaf-curd-web-app/src/main/resources/templates/index.html
+++ b/springboot-thymeleaf-curd-web-app/src/main/resources/templates/index.html
@@ -3,11 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title>Employee Management System</title>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+ integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body>
-	<div align="center" class="container my-2">
-	<a th:href="@{/showNewEmployeeForm}"> Add Employee</a>
+	<div class="container my-2">
+	<a th:href="@{/showNewEmployeeForm}" class="btn btn-primary btn-sm mb-3"> Add Employee</a>
 		<h1>Employees List</h1>
 		<table border="1" class="table table-striped table-responsive-md">
 			<thead>
@@ -15,6 +16,7 @@
 					<th>Employee First Name</th>
 					<th>Employee Last Name</th>
 					<th>Employee Email</th>
+					<th> Action</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -22,10 +24,35 @@
 					<td th:text="${employee.firstName}"></td>
 					<td th:text="${employee.lastName}"></td>
 					<td th:text="${employee.email}"></td>
+					<td><a th:href="@{/showFormForUpdate/{id}(id=${employee.id})}" class="btn btn-primary ">Update</a>
+						 <a th:href="@{/deleteEmployee/{id}(id=${employee.id})}" class="btn btn-danger ">Delete</a>
+					</td>
 				</tr>
 			</tbody>
 		</table>
 
+		<div th:if="${totalPages >1}">
+			<div class="row col-sm-10">
+				<div class="col-sm-2 ">
+					Total Rows:[[${totalItems}]]
+				</div>
+				<div class="col-sm-1 ">
+					<span th:each="i: ${#numbers.sequence(1,totalPages)}"> 
+					<a th:if="${currentPage !=i }" th:href="@{'/page/' + ${i}}">[[${i}]]</a>
+						<span th:unless="${currentPage !=i }">[[${i}]]</span> &nbsp;
+						&nbsp;
+					</span>
+				</div>
+				<div class="col-sm-1 ">
+					<a th:if="${currentPage < totalPages}" th:href="@{'/page/' + ${currentPage +1}}"></a>
+					<span h:unless="${currentPage < totalPages}">Next</span>
+				</div>
+				<div class="col-sm-1 ">
+					<a th:if="${currentPage < totalPages}" th:href="@{'/page/' + ${totalPages}}"></a>
+					<span h:unless="${currentPage < totalPages}">Last</span>
+				</div>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
