--- a/springboot-thymeleaf-curd-web-app/src/main/resources/templates/index.html
+++ b/springboot-thymeleaf-curd-web-app/src/main/resources/templates/index.html
@@ -5,6 +5,8 @@
 <title>Employee Management System</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
  integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+ 
+<link rel="stylesheet" type="text/css" th:href="@{/css/css.css}"/>
 </head>
 <body>
 	<div class="container my-2">
@@ -44,12 +46,12 @@
 					</span>
 				</div>
 				<div class="col-sm-1 ">
-					<a th:if="${currentPage < totalPages}" th:href="@{'/page/' + ${currentPage +1}}"></a>
-					<span h:unless="${currentPage < totalPages}">Next</span>
+					<a th:if="${currentPage < totalPages}" th:href="@{'/page/' + ${currentPage +1}}">Next</a>
+					<span th:unless="${currentPage < totalPages}">Next</span>
 				</div>
 				<div class="col-sm-1 ">
-					<a th:if="${currentPage < totalPages}" th:href="@{'/page/' + ${totalPages}}"></a>
-					<span h:unless="${currentPage < totalPages}">Last</span>
+					<a th:if="${currentPage < totalPages}" th:href="@{'/page/' + ${totalPages}}">Last</a>
+					<span th:unless="${currentPage < totalPages}">Last</span>
 				</div>
 			</div>
 		</div>
